WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
138512
Popovers do not dismiss when navigating back and forth using gestures
https://bugs.webkit.org/show_bug.cgi?id=138512
Summary
Popovers do not dismiss when navigating back and forth using gestures
Tim Horton
Reported
2014-11-07 12:21:06 PST
Popovers do not dismiss when navigating back and forth using gestures
Attachments
Patch
(1.51 KB, patch)
2014-11-07 12:21 PST
,
Tim Horton
bdakin
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Tim Horton
Comment 1
2014-11-07 12:21:27 PST
Created
attachment 241199
[details]
Patch
Tim Horton
Comment 2
2014-11-07 12:26:05 PST
http://trac.webkit.org/changeset/175757
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug