Popovers do not dismiss when navigating back and forth using gestures https://bugs.webkit.org/show_bug.cgi?id=138512 <rdar://problem/18900200>

Reviewed by Beth Dakin.

* UIProcess/mac/PageClientImpl.mm:
(WebKit::PageClientImpl::navigationGestureDidBegin):
Dismiss action menu related popovers when navigation gestures begin.


Canonical link: https://commits.webkit.org/156337@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@175757 268f45cc-cd09-0410-ab3c-d52691b4dbfc